[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.7"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
pydantic = {extras = ["email"], version = "^2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
